--- a/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
@@ -15,7 +15,7 @@
 \begin{enumerate}[label=\alph*)]
   \item
         \begin{itemize}
-          \item[\red{$(\entonces)$}]
+          \item[\red{$(\Rightarrow)$}]
                 $$
                   n \relacion m
                   \Sii{def}
@@ -24,9 +24,9 @@
                 Si la expresión es divible por 10, debe ser divisible por 2 y también por 5:
                 $$
                   \llave{l}{
-                    \magenta{n^2 + 4m^2 + m - 6n} \taa{}{\red{!}}{\conga5}
+                      \magenta{n^2 + 4m^2 + m - 6n} \taa{(5)}[\red{!}]\congruente
                     \congruencia{n^2 - m^2 + m - n}{0}{5 }\Tilde \\
-                    \magenta{n^2 + 4m^2 + m - 6n} \conga2 n^2 + m \taa{}{\red{!!}}{\conga2}
+                    \magenta{n^2 + 4m^2 + m - 6n} \conga2 n^2 + m \taa{(2)}[\red{!!}]\congruente
                     \congruencia{n+m}{0}{2} \sii \congruencia{n}{m}{2} \Tilde
                   }
                 $$
@@ -52,11 +52,11 @@
                   \text{Si }\congruencia{n}{m}{2}
                   \entonces
                   \magenta{n^2 + 4m^2 + m - 6n}
-                  \taa{}{\red{!}}{\conga2}
+                  \taa{(2)}[\red{!}]\congruente
                   \congruencia{ 5 \ub{m (m - 1)}{\text{par\red{!}}}}{0}{2}
                   \sisolosi
                   2 \divideA \magenta{n^2 + 4m^2 + m - 6n}\Tilde
-                $$\par
+                $$
                 Por lo tanto si
                 $$
                   n \relacion m
