--- a/1-guia/ejercicios-1/ej-13-1.tex
+++ b/1-guia/ejercicios-1/ej-13-1.tex
@@ -72,7 +72,7 @@
         $$
         y también:
         $$
-          B \inter C \taa{C \subseteq A}{\red{!}}{\subseteq}
+          B \inter C \taa{$C \subseteq A$}[\red{!}]{\subseteq}
           B \inter A = A \inter B \subseteq (A \inter B) \union (A^c \inter B^c)
           \igual{$\llamada1$}
           (A \triangle B)^c
