--- a/1-guia/ejercicios-1/ej-14-1.tex
+++ b/1-guia/ejercicios-1/ej-14-1.tex
@@ -62,7 +62,7 @@
             \fillANotB
             \fillBNotA
           \end{venndiagram3sets}
-          $\taa{\Tilde}{}{\subseteq}$
+          $\taa{\Tilde}{\subseteq}$
           \begin{venndiagram3sets}[shade=orange!30!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
             \fillANotB
             \fillBNotC
@@ -153,7 +153,7 @@
                   A \triangle B
                   \igual{def}
                   A - B \union B - A
-                  \taa{\red{!!}}{\llamada1}{=}
+                  \igual{\red{!!}}[$\llamada1$]
                   B - A = B \inter A^c
                 $$
 
@@ -165,7 +165,7 @@
                   B - A
                   =
                   B - A \union \blue{\vacio}
-                  \taa{\red{!!}}{\llamada1}{=}
+                  \igual{\red{!!}}[$\llamada1$]
                   B - A \union \blue{A - B}
                   \igual{def}
                   A \triangle B
