--- a/1-guia/ejercicios-1/ej-9-1.tex
+++ b/1-guia/ejercicios-1/ej-9-1.tex
@@ -13,7 +13,9 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
 
         Supongo que:
         $$
-          A \nsubseteq B \Sii{def}[\red{!}] \existe x \en A \text{ tal que } x \taa{\llamada1}{}\notin B.
+          A \nsubseteq B
+          \Sii{def}[\red{!}]
+          \existe x \en A \text{ tal que } x \taa{$\llamada1$}[$\notin$] B.
         $$
         Y lo que intento es llegar a una \red{contradicción}, es decir me gustaría que pase algo que \red{contradiga}
         la \purple{hipótesis}.\par
@@ -49,14 +51,16 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
         $$
           \ub{A \subseteq B}{\text{\purple{hipótesis}}} \magenta{\entonces} \partes(A) \subseteq \partes(B)
         $$
-        Le pongo nombre $S$ a los elementos de $\partes(A)$. Todo elemento $S \taa{\llamada2}{}\en \partes(A)$
+        Le pongo nombre $S$ a los elementos de $\partes(A)$.
+        Todo elemento $S \taa{$\llamada2$}\en \partes(A)$
         es un conjunto que cumple que $S \subseteq A$ por la definición del conjunto $\partes(A)$.
         Si todo elemento $S$ cumple que $S \subseteq A$ por \purple{hipótesis} también tiene que estar en $B$.
 
-        \textit{Nota que puede ser útil:}\par
-        Terminá lo que falta de esta parte de la demostración sin ver como sigue y después comparás
-        .\par
-        \textit{Fin nota que puede ser útil:}\par\medskip
+        \textit{Nota que puede ser útil:}
+
+        Terminá lo que falta de esta parte de la demostración sin ver como sigue y después comparás.
+
+        \textit{Fin nota que puede ser útil:}
 
         $$
           S \en B \Entonces{def} S \en \partes(B).
