--- a/2-guia/ejercicios-2-extra/ej-extra-5-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-5-2.tex
@@ -95,14 +95,14 @@ Ahora nos sacamos un montón de términos con la \purple{hipótesis inductiva} y
 $$
   \begin{array}{rcl}
     \productoria{i=1}{\blue{k+1}} \frac{i!}{i+\blue{k+1}}
-     & \taa{\purple{\text{HI}}}{}{\geq} &
+     & \mayorIgual{\purple{HI}} &
     \frac{1}{10} \cdot \frac{(k+1)!}{2k+1} \cdot \frac{k+1}{2k+2}
     =
     \frac{1}{20} \cdot \frac{(k+1)!}{2k+1}
-    \taa{\red{!}}{}\geq
+    \mayorIgual{\red{!}}
     \frac{1}{20} \cdot \frac{(k+1)!}{2k+\magenta{2}} =
     \frac{1}{40} \cdot k!
-    \taa{\red{!}}{}\geq
+    \mayorIgual{\red{!}}
           \frac{1}{10} \quad \paratodo k \en \naturales_{> 2}
   \end{array}
 $$
