--- a/2-guia/ejercicios-2-extra/ej-extra-6-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-6-2.tex
@@ -47,7 +47,7 @@ $$
   a_{\blue{k+2}}
   \igual{def}
   \frac{2k+3}{7} \cdot (a_{k+1} + 2 \cdot a_k)
-  \taa{\purple{\text{HI}}}{}>
+  \mayor{\purple{HI}}
   \frac{2k+3}{7} \cdot (2^{k+1} + 2 \cdot 2^k)
   =
   \frac{2k+3}{7} \cdot (2^{k+2})
@@ -69,9 +69,6 @@ también se cumple.
 
 Dado que $p(1), p(2), p(3), p(k), p(k+1) \ytext p(k+2)$ son todas verdaderas, por principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales$.
 
-% Contribuciones
-%\begin{aportes}
-%  %% iconos : \github, \instagram, \tiktok, \linkedin
-%  %\aporte{url}{nombre icono}
-%  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
-%\end{aportes}
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
