--- a/2-guia/ejercicios-2/ej-11-2.tex
+++ b/2-guia/ejercicios-2/ej-11-2.tex
@@ -47,7 +47,7 @@
         Desarrollemos el lado izquierdo de la desigualdad
         \begin{align*}
           \productoria{i=1}{n+1}  (1 + a_i) & = (1 + a_{n+1}) \productoria{i=1}{n}  (1 + a_i)
-          \taa{\text{HI}}{(2)}{\geq}
+            \taa{\text{HI}}[(2)]{\geq}
           (1 + a_{n+1}) \left(1 + \sumatoria{i=1}{n} a_i\right) = 1 + \sumatoria{i=1}{n} a_i + a_{n+1} + a_{n+1}\sumatoria{i=1}{n} a_i
           \igual{*}                                                                                                                          \\
                                             & \igual{*} 1 + \sumatoria{i=1}{n+1} a_i + a_{n+1}\sumatoria{i=1}{n} a_i \mayorIgual{\text{Aux}}
