--- a/2-guia/ejercicios-2/ej-17-2.tex
+++ b/2-guia/ejercicios-2/ej-17-2.tex
@@ -46,7 +46,10 @@
 
     Calculemos $\displaystyle \sumatoria{i=1}{n} i \cdot i! $:
     \begin{align*}
-            \sumatoria{i=1}{n}  i \cdot i! \taa{\text{Aux}}{1}= \sumatoria{i=1}{n}  (a_{i+1} - a_i) \taa{\text{Aux}}{2}=
+        \sumatoria{i=1}{n}  i \cdot i!
+        \igual{Aux}[1]
+        \sumatoria{i=1}{n}  (a_{i+1} - a_i)
+        \igual{Aux}[2]
         a_{n+1} - a_1 = (n+1)! - 1
     \end{align*}
 
