--- a/3-guia/ejercicios-3/ej-26-3.tex
+++ b/3-guia/ejercicios-3/ej-26-3.tex
@@ -35,7 +35,7 @@ $$
   \everymath{\displaystyle}
   \begin{array}{rcl}
     \binom{2n+2}{n+1} = \frac{(2n+2)!}{(n+1)! \cdot (2n+2 - (n+1))!} & = & \frac{(2n+2)(2n+1)(2n)!}{(n+1)!\cdot(n+1)!}                                                                                             \\
-                                                                     & = & \frac{(2n+2)(2n+1)\purple{(2n)!}}{(n+1)^2 \cdot \purple{(n!)^2}} \taa{\text{\purple{HI}}}{}> \frac{(2n+2)(2n+1)\purple{n 2^n}}{(n+1)^2}
+                                                                     & = & \frac{(2n+2)(2n+1)\purple{(2n)!}}{(n+1)^2 \cdot \purple{(n!)^2}} \mayor{\purple{HI}} \frac{(2n+2)(2n+1)\purple{n 2^n}}{(n+1)^2}
   \end{array}
 $$
 Ahora quiero ver que:
