--- a/4-guia/ejercicios-4-extra/ej-extra-10-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-10-4.tex
@@ -47,7 +47,7 @@ $$
   a_{k+2}
   \igual{def}
   24 a_{k+1} + 65^k a_k + 96 k^4
-  \taa{(32)}{\purple{HI}}\congruente
+  \taa{(32)}[\purple{HI}]\congruente
   24 (\purple{3^{k+1} - 5^{k+1}}) + \purple{3^k - 5^k}
   \igual{\red{!!}}
   73 \cdot 3^k - 121 \cdot 5^k
