--- a/4-guia/ejercicios-4/ej-1-4.tex
+++ b/4-guia/ejercicios-4/ej-1-4.tex
@@ -1,4 +1,4 @@
-\textit{\underline{Divisibilidad}}\par
+\textit{\underline{Divisibilidad}}
 
 \begin{enunciado}{\ejercicio}
   Decidir si las siguientes afirmaciones son verdaderas
@@ -48,7 +48,7 @@
   \item
         $a\divideA c \ytext b \divideA c \entonces a \cdot b \divideA c$\par%
         $4\divideA 12 \ytext 6 \divideA 12 \text{ pero } 24 \noDivide 12$
-        
+
   \item
         $a\divideA b \entonces a \leq b$\par
         $2\divideA -4 \text{ pero } 2 > -4$
