--- a/5-guia/ejercicios-5-extra/ej-extra-7-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-7-5.tex
@@ -1,4 +1,4 @@
-\newcommand{\congPTF}[1]{\taa{(#1)}{\text{PTF}}{\congruente}}
+\newcommand{\congPTF}[1]{\taa{(#1)}[\text{PTF}]{\congruente}}
 
 \begin{enunciado}{\ejExtra}
   Hallar todos los primos $p \en \naturales$ tales que
