--- a/5-guia/ejercicios-5/ej-11-5.tex
+++ b/5-guia/ejercicios-5/ej-11-5.tex
@@ -129,7 +129,7 @@ Acomodar, coprimizar, \href{\chinito}{Teorema Chino del resto} y resolver.
 			      \congruencia{5a}{3}{6} \\
 			      \congruencia{9a}{1}{14}
 		      }
-		      \taa{\red{!}}{}\equivalente
+                      \taa{\red{!}}\equivalente
 		      \llave{l}{
 			      \congruencia{a}{2}{5}   \llamada1\\
 			      \congruencia{a}{0}{3}   \llamada2\\
