--- a/5-guia/ejercicios-5/ej-15-5.tex
+++ b/5-guia/ejercicios-5/ej-15-5.tex
@@ -28,7 +28,7 @@
           a = 71^{22283} =
           71^{22280 + 3} =
           71^{22280} \cdot 71^3
-          \taa{\text{PTF}}{\red{!}}\congruente 71^3 \ (11)
+          \taa{PTF}[\red{!}]{\congruente} 71^3 \ (11)
           \sii
           \congruencia{a}{5^3 \congruente 4}{11}
         $$
