--- a/5-guia/ejercicios-5/ej-22-5.tex
+++ b/5-guia/ejercicios-5/ej-22-5.tex
@@ -18,7 +18,7 @@ $$
   \llave{l}{
     \congruencia{X^{45}}{10}{23}
     \Sii{$23\noDivide X$}[\red{!!!}]
-    X^{22} X^{22} X^1 \taa{(23)}{\text{PTF}}{\congruente} \congruencia{X}{10}{23} \\
+    X^{22} X^{22} X^1 \conga{(23)}[\text{PTF}] \congruencia{X}{10}{23} \\
 
     \congruencia{X^{45}}{1}{2} \Sii{$X^{45}$ es impar}[entonces X también]
     \congruencia{X}{1}{2}                                                                    \\
