--- a/5-guia/ejercicios-5/ej-23-5.tex
+++ b/5-guia/ejercicios-5/ej-23-5.tex
@@ -54,7 +54,7 @@ la exponencial más rápido:
 $$
   \congruencia{5^\alpha}{3}{11}
   \Entonces{$11 \noDivide 5$}[PTF, con $\alpha=\green{10}$]
-  \congruencia{5^{\green{10}} \taa{\red{!}}{}{\congruente} 5^{r_{10}(10)}}{1}{11}
+  \congruencia{5^{\green{10}} \conga{\red{!}} 5^{r_{10}(10)}}{1}{11}
 $$
 Con ese resultado uno se tienta a repetir lo que se hizo para $\llamada1$, pero ahí está \textit{la trampa del ejercicio}.
 El PTF nos da un resultado, pero no quiere decir que no haya otro de valor menor. Es decir que puede haber un $\alpha < 10$ tal que
