--- a/6-guia/ejercicios-6-extra/ej-extra-4-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-4-6.tex
@@ -73,7 +73,7 @@ $$
     \congruencia{n}{2}{4} \\
     \congruencia{n}{2}{3}
   }
-  \taa{\red{!}}{}\leftrightsquigarrow
+  \taa{\red{!}}{\leftrightsquigarrow}
   \llave{l}{
     \congruencia{n}{2}{4} \\
     \congruencia{n}{5}{9}
