--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -52,7 +52,7 @@
                 $$
                   \begin{array}{c}
                     \alpha \text{ es raíz \textit{simple} de } f \sisolosi (X - \alpha) \divideA f
-                    \ytext (X - \alpha)^2 \taa{\red{!!}}{}\noDivide f \\
+                    \ytext (X - \alpha)^2 \taa{\red{!!}}\noDivide f \\
                     f = (X - \alpha)\cdot q,\ \text{ con } q \en \K[X]  \ytext  \magenta{ q(\alpha) \distinto 0}.
                   \end{array}
                 $$
