--- a/2-guia/ejercicios-2/ej-18-2.tex
+++ b/2-guia/ejercicios-2/ej-18-2.tex
@@ -224,15 +224,17 @@
         Caso $n$ impar:
         \begin{align*}
           a_{n+2} \overset{(3)} & {=} -a_{n+1} - 3 \igual{HI} -(-1)^{n+1}3(n+1) - 3
-          \taa{Aux}{1}{=} (-1)^{n+2}3(n+1) - 3
-          \taa{Aux}{2}{=} -3(n+1) - 3                                                                          \\
-                a_{n+2}               & = -3n - 3 - 3 = -3n -6 = -3(n+2) = (-1)3(n+2) \taa{Aux}{2}{=} (-1)^{n+2}3(n+2) \\
+            \igual{Aux}[1] (-1)^{n+2}3(n+1) - 3
+            \igual{Aux}[2] -3(n+1) - 3                                                                          \\
+                a_{n+2}               & = -3n - 3 - 3 = -3n -6 = -3(n+2) = (-1)3(n+2)
+                \igual{Aux}[2]
+                (-1)^{n+2}3(n+2) \\
           a_{n+2}               & = (-1)^{n+2}3(n+2) \entonces P(n+2):V,\, n \text{ impar}
         \end{align*}
         Caso $n$ par:
         \begin{align*}
           a_{n+2} \overset{(4)} & {=} a_{n+1} + 2 a_n + 9 \igual{HI} (-1)^{n+1}3(n+1) + 2(-1)^n 3n + 9
-          \taa{Aux}{4}{=} -3(n+1) + 2 \cdot 3n + 9                                                                    \\
+          \igual{Aux}[4] -3(n+1) + 2 \cdot 3n + 9                                                                    \\
           a_{n+2}               & = -3n - 3 + 6n + 9 = 3n + 6 = 3(n+2) = 1 \cdot 3(n+2)\igual{Aux.5} (-1)^{n+2}3(n+2) \\
           a_{n+2}               & = (-1)^{n+2}3(n+2) \entonces P(n+2):V,\, n \text{ par}
         \end{align*}
