--- a/6-guia/ejercicios-6/ej-7-6.tex
+++ b/6-guia/ejercicios-6/ej-7-6.tex
@@ -123,7 +123,7 @@
             \congruencia{n}{3}{4} \\
             \congruencia{n}{5}{6}
           }
-          \taa{\red{!}}{}\leftrightsquigarrow
+          \taa{\red{!}}{\leftrightsquigarrow}
           \llave{l}{
             \congruencia{n}{3}{4} \\
             \congruencia{n}{2}{3}
