fix extra 6 guia 5

--- a/5-guia/ejercicios-5-extra/ej-extra-6-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-6-5.tex
@@ -62,7 +62,7 @@ tomar el exponente $\blue{Y} = r_6(2^n)$ son 2 o 4. Es decir que:
 $$
   \llave{rl}{
     \congruencia{\orange{X}}{5^2 \conga7 4}{7} & \text{ si $n$ impar}  \\
-    \congruencia{\orange{X}}{5^4 \conga7 1}{7} & \text{ si $n$ par}  \\
+    \congruencia{\orange{X}}{5^4 \conga7 2}{7} & \text{ si $n$ par}  \\
   }
 $$
 Finalmente:
@@ -70,7 +70,7 @@ $$
   \cajaResultado  {
     r_7(12^{2^n})  =
     \llave{ll}{
-      1 & \text{ si } n \text{ par}                        \\
+      2 & \text{ si } n \text{ par}                        \\
       4 & \text{ si } n \text{ impar}
     }
   }
@@ -81,5 +81,6 @@ $$
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
   \item \aporte{https://github.com/nick052}{Nico Alegre \github}
+  \item \aporte{https://github.com/RamaEche}{Ramiro E. \github}
 \end{aportes}
 
