add extra 9 guia 6

--- a/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
@@ -90,7 +90,7 @@ En \red{!!!} cálculo fue el de $\congruencia{10^9}{10}{15}:\quad
     \congruencia{X}{0}{5} \\
     \congruencia{X}{1}{3}
   }
-  \Entonces{TCH}
+  \Sii{\href{\chinito}{TCH}}
   \congruencia{X}{10}{15}
 $
 
@@ -123,7 +123,7 @@ $$
     \Sii{PTF}
     \congruencia{X}{10}{13}
   }
-  \Entonces{TCH}
+  \Sii{\href{\chinito}{TCH}}
   \congruencia{X}{10}{65}
 $$
 
@@ -137,7 +137,7 @@ $$
 % Contribuciones
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{\neverGonnaGiveYouUp}{Nacho \youtube}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
 \end{aportes}
