fix extra 9 guia 6

--- a/6-guia/ejercicios-6-extra/ej-extra-9-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-9-6.tex
@@ -35,7 +35,7 @@
         puedo calcular que su parte real valga 0:
         $$
           \textstyle
-          \text{Si } \blue{z} \en \complejos,~ \re(\frac{\blue{z} + \blue{\bar{z}}}{2}) = 0
+          \text{Si } \blue{z} \en \complejos,~ \re(\blue{z}) = \frac{\blue{z} + \blue{\bar{z}}}{2} = 0
           \sii
           \blue{z} \text{ es imaginario puro o cero}.
         $$
