add extra 11 guia 2

--- a/4-guia/ejercicios-4-extra/ej-extra-13-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-13-4.tex
@@ -25,19 +25,24 @@ $$
     D \divideA A \cdot B^2 \\
     D \divideA A^2 + B^2
   }
-  \flecha{\red{!!}}
+  \Sii{\red{!!}}
   \llave{l}{
     D \divideA A^3 \\
     D \divideA B^4
   }
 $$
-Oka, ahí en el \red{!!} hice lo de siempre: Multiplique una fila por $A$ o $B$ y resté y coso.\par
+Oka, ahí en el \red{!!} hice lo de siempre: Multipliqué una fila por $A$, la otra por $B^2$ y resté y coso.
+
 Lo que nos queda es algo muy parecido a lo que pasó en el ejercicio \hyperlink{ejExtra:4-12-coprimos}{éste{\tiny(click)}}.
+
 \medskip
 
-\textit{Interpretación:}\par
-Tenemos que $D$ por su condición de divisor común debe dividir a dos número \textit{coprimos}, dado que si $A \cop B$ también sucede que $A^3 \cop B^4$,
-because \textit{primos and shit}, y bueh, ¿Puede ser eso posible?.. Sí! Cuando $D = 1$. \par
+\textit{Interpretación:}
+
+Tenemos que $D$ por su condición de divisor común debe dividir a dos número \textit{coprimos},
+dado que si $A \cop B$ también sucede que $A^3 \cop B^4$,
+ \textit{because primos and shit}, y bueh, ¿Puede ser eso posible?.. Sí! Cuando $D = 1$.
+
 Entonces:
 $$
   D = 1 \entonces d = 27 \text{ para cada par } (a,b) \en \enteros \big/ (a:b) = 3
