--- a/4-guia/ejercicios-4-extra/ej-extra-9-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-9-4.tex
@@ -16,13 +16,13 @@ $$
 
 $$
   \llamada1\llave{l}{
-    10a - 15 \divideA  4a^2 -13a + 8\\
+      10a - 15 \divideA  4a^2 -13a + 8 \vspace{2pt}\\
     10a - 15 \divideA  10a - 15
   }
-  \flecha{operaciones}[varias]
+  \Sii{\red{!!!}}
   \llave{l}{
-    10a - 15 \divideA  -25 \llamada2\\
-    10a - 15 \divideA  10a - 15.
+    10a - 15 \divideA  -25 \llamada2 \vspace{2pt}\\
+    10a - 15 \divideA  10a - 15
   }
 $$
 Para que ocurra $\llamada1$, debe ocurrir $\llamada2$.
