--- a/6-guia/ejercicios-6-extra/ej-extra-9-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-9-6.tex
@@ -31,7 +31,7 @@
             \blue{z}^3                          \\
           \end{array}
         $$
-        Ahí esta la expresión un poco más bonita y reescribí a la base $\blue{z}$. Para probar que un número es imaginario puro,
+        Ahí esta la expresión un poco más bonita y reescribí a la base como $\blue{z}$. Para probar que un número es imaginario puro,
         puedo calcular que su parte real valga 0:
         $$
           \textstyle
