fix extra 11 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-11-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-11-2.tex
@@ -56,7 +56,8 @@ $$
   F_{4h} + 2F_{4h+1} + F_{4h+2} \igual{def}
   2F_{4h} + 3F_{4h+1} \conga{3}[\text{\purple{HI}}] 0
 $$
-Por lo tanto la pr0posición $p(\blue{h+1})$ también resultó verdadera.
+Por lo tanto la proposición $p(\blue{h+1})$ también resultó verdadera. Si no viste bien porque la congruencia da 0, pensá que le primer
+término es \textit{\purple{por algo}} y el segundo término \textit{por otra cosa}.
 
 Como
 $p(\blue{1}), p(\blue{h}) \ytext p(\blue{h + 1})$ resultaron verdaderas, por el principio de inducción también
