fix extra 11 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-11-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-11-2.tex
@@ -59,9 +59,10 @@ $$
 Por lo tanto la proposición $p(\blue{h+1})$ también resultó verdadera. Si no viste bien porque la congruencia da 0, pensá que le primer
 término es \textit{\purple{por algo}} y el segundo término \textit{por otra cosa}.
 
-Como
-$p(\blue{1}), p(\blue{h}) \ytext p(\blue{h + 1})$ resultaron verdaderas, por el principio de inducción también
-lo es $p(n) \paratodo n \en \naturales$
+\bigskip
+
+Como $p(\blue{1}), p(\blue{h}) \ytext p(\blue{h + 1})$ resultaron verdaderas, por el principio de inducción también
+lo es $p(n) \paratodo n \en \naturales$.
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
